force-app/main/default/objects/Krow__Krow_Configuration__c/Krow__Krow_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>it&apos;s used for Klient app</description>
    <label>Klient Configuration</label>
</CustomObject>