force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Account_Lookup_Secondary_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Account_Lookup_Secondary_Field_Api_Name__c</fullName>
    <description>A secondary field of account to display under the Account lookup when creating a new Project.</description>
    <inlineHelpText>A secondary field of account to display under the Account lookup when creating a new Project.</inlineHelpText>
    <label>Account Lookup Secondary Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>