force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Activate_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Krow__Activate_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Timeline</label>
    <type>Checkbox</type>
</CustomField>