force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Actual_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Actual_API_Name__c</fullName>
    <label>Actual API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>