force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Create_Resource_Utilization_by_Month__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Resource_Utilization_by_Month__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If it is checked, resource utilization records will be created/update on monthly basis.</description>
    <label>Create Resource Utilization by Month</label>
    <type>Checkbox</type>
</CustomField>