force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Create_Resource_Utilization_by_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_Resource_Utilization_by_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Resource Utilization will be calculated by Resource and Project.</description>
    <label>Create Resource Utilization by Project</label>
    <type>Checkbox</type>
</CustomField>