force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Create_SFDC_Task_from_Krow_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Create_SFDC_Task_from_Krow_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create SFDC Task from Klient Task</label>
    <type>Checkbox</type>
</CustomField>