force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Default_Project_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Project_Assignment_Status__c</fullName>
    <label>Default Project Assignment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>