force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Auto_Archive__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Auto_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Auto Archive</label>
    <type>Checkbox</type>
</CustomField>