force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Contact_Auto_Populated__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Contact_Auto_Populated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked disable contact to be auto populated on Project.</description>
    <label>Disable Contact Auto Populated</label>
    <type>Checkbox</type>
</CustomField>