force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Gantt_Auto_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Gantt_Auto_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, on load auto-scheduling of gantt will not performed.</description>
    <inlineHelpText>When this is checked, on load auto-scheduling of gantt will not performed.</inlineHelpText>
    <label>Disable Gantt Auto Scheduling</label>
    <type>Checkbox</type>
</CustomField>