force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Link_Deletion_on_Task_Change__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Link_Deletion_on_Task_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated</description>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>