force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Mark_Billable_To_Project_Childs__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Mark_Billable_To_Project_Childs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable update Billable And Currency On Project Childs (Project Assignment, Task, Timesheet)  process on update the project.</description>
    <inlineHelpText>Disable update Billable And Currency On Project Childs (Project Assignment, Task, Timesheet)  process on update the project.</inlineHelpText>
    <label>Disable Mark Billable To Project Childs</label>
    <type>Checkbox</type>
</CustomField>