force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Resource_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Resource_Rescheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skip task assignment update and task scheduling on Schedule All Resource, Split Across Team,  Scheduling Mode,  Start Date, Due Date change on a task</description>
    <inlineHelpText>Skip task assignment update and task scheduling on Schedule All Resource, Split Across Team,  Scheduling Mode,  Start Date, Due Date change on a task</inlineHelpText>
    <label>Disable Resource Rescheduling</label>
    <type>Checkbox</type>
</CustomField>