force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Scheduling_on_Task_Update__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Scheduling_on_Task_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will disable auto scheduling of task on Gantt.</description>
    <inlineHelpText>If checked, it will disable auto scheduling of task on Gantt.</inlineHelpText>
    <label>Disable Scheduling on Task Update</label>
    <type>Checkbox</type>
</CustomField>