force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Task_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Task_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task Scheduling</label>
    <type>Checkbox</type>
</CustomField>