force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Time_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Time_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Time Rollup</label>
    <type>Checkbox</type>
</CustomField>