force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Disable_Timesheet_Approval_Submission__c.field-meta.xml
<CustomField>
    <fullName>Krow__Disable_Timesheet_Approval_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Timesheet wouldn&apos;t be submitted in approval process.</description>
    <label>Disable Timesheet Approval Submission</label>
    <type>Checkbox</type>
</CustomField>