force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Display_Decimals_On_Planner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Display_Decimals_On_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It would display 2 decimal places on the Resource Planner summary level (all views -  Hour, Day, Week, Month).</description>
    <inlineHelpText>It would display 2 decimal places on the Resource Planner summary level (all views -  Hour, Day, Week, Month).</inlineHelpText>
    <label>Display Decimals On Planner</label>
    <type>Checkbox</type>
</CustomField>