force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Email_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Service_Address__c</fullName>
    <description>This field is used to store Email Service address for project email activity</description>
    <inlineHelpText>This field is used to store Email Service address for project email activity</inlineHelpText>
    <label>Email Service Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>