force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Email_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Service_Name__c</fullName>
    <description>This field is used for display name for Email Service address.</description>
    <inlineHelpText>This field is used for display name for Email Service address.</inlineHelpText>
    <label>Email Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>