force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Batch_Actuals_Update__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Batch_Actuals_Update__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, Actuals on Projects/Tasks will be calculated in Batch.</description>
    <label>Enable Batch Actuals Update</label>
    <type>Checkbox</type>
</CustomField>