force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Batch_Actuals_Update_With_Sch_Job__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Batch_Actuals_Update_With_Sch_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this custom setting is enabled then rollup will be based on the scheduled job and the rollup batch will not trigger immediately.</description>
    <inlineHelpText>When this custom setting is enabled then rollup will be based on the scheduled job and the rollup batch will not trigger immediately.</inlineHelpText>
    <label>Enable Batch Actuals Update With Sch Job</label>
    <type>Checkbox</type>
</CustomField>