force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Batched_Schedule_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Batched_Schedule_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Task Assignment Schedules will be calculated in Batch.</description>
    <label>Enable Batched Schedule Calculation</label>
    <type>Checkbox</type>
</CustomField>