force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Generate_Invoice_In_Async_Mode__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Generate_Invoice_In_Async_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then create invoice child items in the async process after creating an invoice from Generate Invoice page.</description>
    <inlineHelpText>If checked then create invoice child items in the async process after creating an invoice from Generate Invoice page.</inlineHelpText>
    <label>Enable Generate Invoice In Async Mode</label>
    <type>Checkbox</type>
</CustomField>