force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Mobile_App__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Mobile_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Mobile App</label>
    <type>Checkbox</type>
</CustomField>