force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Project_Assignment_Dates_Reside__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Project_Assignment_Dates_Reside__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, only show Resource Planner rows where Project Assignment Dates resides.</description>
    <inlineHelpText>If checked, only show Resource Planner rows where Project Assignment Dates resides.</inlineHelpText>
    <label>Enable Project Assignment Dates Reside</label>
    <type>Checkbox</type>
</CustomField>