force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Record_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to switch between field set and recordtype for project create/edit</description>
    <inlineHelpText>If checked, Then record type support for project enabled.</inlineHelpText>
    <label>Enable Project Record Types</label>
    <type>Checkbox</type>
</CustomField>