force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Split_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Split_Approval_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Split Approval Process</label>
    <type>Checkbox</type>
</CustomField>