force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Standard_View_from_My_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Standard_View_from_My_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Standard Project View from My Project</description>
    <inlineHelpText>Enable Standard Project View from My Project</inlineHelpText>
    <label>Enable Standard View from My Project</label>
    <type>Checkbox</type>
</CustomField>