force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Task_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Task_Record_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to switch between fieldset and record type for task create/edit</description>
    <inlineHelpText>If checked, Then record type support for Task enabled.</inlineHelpText>
    <label>Enable Task Record Types</label>
    <type>Checkbox</type>
</CustomField>