force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Enable_Task_Scheduled_Dates_Reside__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Task_Scheduled_Dates_Reside__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, it will only show the Task for that Resource on the Planner if the Task Schedule Dates are within the view.</description>
    <inlineHelpText>If checked, it will only show the Task for that Resource on the Planner if the Task Schedule Dates are within the view.</inlineHelpText>
    <label>Enable Task Scheduled Dates Reside</label>
    <type>Checkbox</type>
</CustomField>