force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Exclude_non_billable_project_tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exclude_non_billable_project_tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked,Then non-billable project tasks will be excluded from task planner.</description>
    <inlineHelpText>If checked,Then non-billable project tasks will be excluded from task planner.</inlineHelpText>
    <label>Exclude non billable project tasks</label>
    <type>Checkbox</type>
</CustomField>