force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Expense_Import_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Import_Batch_Size__c</fullName>
    <label>Expense Import Batch Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>