force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Invoice_Payment_Schedule_Term_Days__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Payment_Schedule_Term_Days__c</fullName>
    <label>Invoice Payment Schedule Term Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>