force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Margin_Percent_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Margin_Percent_API_Name__c</fullName>
    <label>Margin % API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>