force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Mass_Timesheet_Approval_By_Split__c.field-meta.xml
<CustomField>
    <fullName>Krow__Mass_Timesheet_Approval_By_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used as defining criteria for searching (Timeshhet Master / Split)on mass timesheet ui.</description>
    <inlineHelpText>To be used as defining criteria for searching (Timeshhet Master / Split)on mass timesheet ui.</inlineHelpText>
    <label>Mass Timesheet Approval By Split</label>
    <type>Checkbox</type>
</CustomField>