force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Percent_Complete_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Percent_Complete_API_Name__c</fullName>
    <description>Used to decide which field should be used to show complete percent on project analytics when project complete % is &quot;Custom&quot;</description>
    <label>% Complete API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>