force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Planner_Schedule_Above_Range_Color__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Schedule_Above_Range_Color__c</fullName>
    <defaultValue>&apos;#D4504C&apos;</defaultValue>
    <inlineHelpText>The default color is Red.</inlineHelpText>
    <label>Planner Schedule Above Range Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>