force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Planner_Schedule_Below_Range_Color__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Schedule_Below_Range_Color__c</fullName>
    <defaultValue>&apos;#FFB75D&apos;</defaultValue>
    <inlineHelpText>The default color is Orange</inlineHelpText>
    <label>Planner Schedule Below Range Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>