force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Planner_Schedule_Equal_Range_Color__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planner_Schedule_Equal_Range_Color__c</fullName>
    <defaultValue>&apos;#4BCA81&apos;</defaultValue>
    <inlineHelpText>The default color is green</inlineHelpText>
    <label>Planner Schedule Equal Range Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>