force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Number__c</fullName>
    <description>This is used for project number on Klient Projects.</description>
    <label>Project Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>