force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Project_Number_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Number_Prefix__c</fullName>
    <description>This is used for Project Number prefix for Klient Projects.</description>
    <label>Project Number Prefix</label>
    <length>12</length>
    <type>Text</type>
</CustomField>