force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Project_Status_Color_Codes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Status_Color_Codes__c</fullName>
    <description>Setup the color codes for the project status.</description>
    <inlineHelpText>Set project status color code. eg. Complete:#008000</inlineHelpText>
    <label>Project Status Color Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>