force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Remove_Outside_Schedules_On_Sync__c.field-meta.xml
<CustomField>
    <fullName>Krow__Remove_Outside_Schedules_On_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this setting is checked, delete Project Assignment Schedules where Task Assignment Schedules do not exist.</description>
    <inlineHelpText>If this setting is checked, delete Project Assignment Schedules where Task Assignment Schedules do not exist.</inlineHelpText>
    <label>Remove Outside Schedules On Sync</label>
    <type>Checkbox</type>
</CustomField>