force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Resource_Planner_Data_Load_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Planner_Data_Load_Batch_Size__c</fullName>
    <label>Resource Planner Data Load Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>