force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Resource_Utilization_Process_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Utilization_Process_Batch_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Resource Utilization Process Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>