force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Roll_Up_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Roll_Up_Estimated_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Estimated Hours on a Task will always roll-up to the parent task(s) - regardless of what has been entered.</description>
    <inlineHelpText>If checked, Estimated Hours on a Task will always roll-up to the parent task(s) - regardless of what has been entered.</inlineHelpText>
    <label>Roll-Up Estimated Hours</label>
    <type>Checkbox</type>
</CustomField>