force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__RU_Soft_Booked_Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__RU_Soft_Booked_Hours_Status__c</fullName>
    <description>Resource Utilization Soft Booked Hours Status</description>
    <inlineHelpText>Resource Utilization Soft Booked Hours Status</inlineHelpText>
    <label>RU Soft Booked Hours Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>