force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Scheduler_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduler_Job_Id__c</fullName>
    <label>Scheduler Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>