force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Show_Project_Task_as_Picklist_on_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Krow__Show_Project_Task_as_Picklist_on_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Convert type-ahead fields to dropdowns for mobile.</description>
    <inlineHelpText>Convert type-ahead fields to dropdowns for mobile.</inlineHelpText>
    <label>Show Project/Task as Picklist on Mobile</label>
    <type>Checkbox</type>
</CustomField>