force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Skip_Survey_Ques_Sequence_Auto_Reorder__c.field-meta.xml
<CustomField>
    <fullName>Krow__Skip_Survey_Ques_Sequence_Auto_Reorder__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this will unchecked and update the Survey question sequence manually then remain survey question sequence related to the survey will auto-reorder by klient sequence reorder process.</description>
    <inlineHelpText>If this will unchecked and update the Survey question sequence manually then remain survey question sequence related to the survey will auto-reorder by krow sequence reorder process.</inlineHelpText>
    <label>Skip Survey Ques Sequence Auto Reorder</label>
    <type>Checkbox</type>
</CustomField>