force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Sort_Projects_by_Account__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sort_Projects_by_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Projects will be sorted alphabetically by Account instead of by Project Name on My Projects.</description>
    <inlineHelpText>If checked, Projects will be sorted alphabetically by Account instead of by Project Name on My Projects.</inlineHelpText>
    <label>Sort Projects by Account</label>
    <type>Checkbox</type>
</CustomField>