force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Survey_From_Email__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_From_Email__c</fullName>
    <description>It will use to as default &quot;From&quot; email address to send survey email when it&apos;s set in Organization-Wide Email Addresses in salesforce.</description>
    <label>Survey From Email</label>
    <type>Email</type>
</CustomField>