force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Survey_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Krow__Survey_Site_URL__c</fullName>
    <description>Site Url for Survey</description>
    <inlineHelpText>Site Url for Survey</inlineHelpText>
    <label>Survey Site URL</label>
    <type>Url</type>
</CustomField>