force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Sync_SFDC_Task_With_Krow__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_SFDC_Task_With_Krow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync SFDC Task With Klient</label>
    <type>Checkbox</type>
</CustomField>