force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Task_Assignment_Status_Color_Codes__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Assignment_Status_Color_Codes__c</fullName>
    <label>Task Assignment Status Color Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>