force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Use_Project_Planned_Hour_for_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Krow__Use_Project_Planned_Hour_for_Forecasting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Forecast process will use Project Assignment Schedule Records (and the Project Assignment BIll/Cost Rates) in the Project Forecasting Process instead of Task Assignment Schedule - e.g. for Forecast Hours, Forecast Revenue etc.</description>
    <inlineHelpText>If checked, the Forecast process will use Project Assignment Schedule Records (and the Project Assignment BIll/Cost Rates) in the Project Forecasting Process instead of Task Assignment Schedule - e.g. for Forecast Hours, Forecast Revenue etc.</inlineHelpText>
    <label>Use Project Planned Hour for Forecasting</label>
    <type>Checkbox</type>
</CustomField>