force-app/main/default/objects/Krow__Krow_Configuration__c/fields/Krow__Week_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Krow__Week_Start_Day__c</fullName>
    <description>To setup the week configuration in application.</description>
    <inlineHelpText>If your week starts on Monday, specify &apos;Mon&apos; or &apos;Monday&apos;.</inlineHelpText>
    <label>Week Start Day</label>
    <length>9</length>
    <type>Text</type>
</CustomField>